--- a/src/index.css
+++ b/src/index.css
@@ -112,3 +112,10 @@ a {
     background-color: #e6f7ff;
     border-color: #91d5ff;
 }
+
+.chartOfAccountIcon {
+
+    font-size: 16px;
+    padding: 8px;
+    border-radius: 20%;
+}
